hphp/test/zend/bad/ext/mysqli/tests/mysqli_unclonable.php
<?php
	require_once("connect.inc");

	if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
		printf("[001] Cannot connect to the server using host=%s, user=%s, passwd=***, dbname=%s, port=%s, socket=%s\n",
			$host, $user, $db, $port, $socket);

	$link_clone = clone $link;
	mysqli_close($link);

	print "done!";
?>